--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -50,6 +50,18 @@
   font-size: 4rem;
 }
 
+.subtitle {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 3rem;
+}
+
+.subsubtitle {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 2rem;
+}
+
 .title,
 .description {
   text-align: center;
